# ATAT

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-stt-worker.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py  pipeline.py  socket.py
backend/app/glossary/domains/: anime.json  kdrama.json  kpop.json  lol-esports.json  tech.json
backend/app/models/: database.py  job.py
backend/app/routers/: domains.py  jobs.py  models.py
backend/app/services/: downloader.py  glossary.py  overlay.py  subtitle.py  transcriber.py  translator.py
backend/app/workers/: stt_worker.py  translation_worker.py
backend/workers/stt_worker/: Dockerfile  handler.py
docs/: architecture.md  glossary-format.md  models.md  training-guide.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: JobStatus.tsx  ModelSelector.tsx  SubtitleOverlay.tsx  UrlInput.tsx  VideoPlayer.tsx
frontend/lib/: api.ts  socket.ts
training/configs/: nllb_finetune.yaml  whisper_lora.yaml
training/data/: README.md  lol_ko_en.json
training/scripts/: download_vods.py  evaluate.py  extract_captions.py  generate_synthetic.py  prepare_dataset.py
