[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atat-backend"
version = "0.1.0"
description = "Korean LCK esports transcription and translation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-socketio>=5.11.0",
    "yt-dlp>=2024.4.9",
    "faster-whisper>=1.0.1",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "sqlmodel>=0.0.18",
    "dashscope>=1.20.0",
    "httpx>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
